JBPM-6573: Kie server scaling using WebSockets